--- a/templates/checkout2.html
+++ b/templates/checkout2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>C</title>
+    <title>Checkout</title>
     <link href="static/assets/vendor/aos/aos.css" rel="stylesheet">
     <link href="static/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="static/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
