Latest Draft Changes

--- a/templates/about.html
+++ b/templates/about.html
@@ -49,9 +49,9 @@
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a href="{{ url_for('home')}}">Home</a></li>
-          <li><a href="{{ url_for('about')}}">About</a></li>
+          <li><a class="active" href="{{ url_for('about')}}">About</a></li>
 <!--          <li><a href="resume.html">Resume</a></li>-->
-          <li><a class="active" href="{{ url_for('services')}}">Services</a></li>
+          <li><a  href="{{ url_for('services')}}">Services</a></li>
 <!--          <li><a href="portfolio.html">Portfolio</a></li>-->
           <li><a href="{{ url_for('contact_me')}}">Contact</a></li>
         </ul>
@@ -129,21 +129,21 @@
 
         <div class="row skills-content text-center">
           <div class="col-lg-4">
-            <img class="skills-image" src="assets/img/apple-touch-icon.png">
+            <img class="skills-image" src="../static/assets/img/bb.jpg">
             <h3 class="skills-title">Strength</h3>
             <p class="skills-description">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
 
           </div>
 
           <div class="col-lg-4">
-            <img class="skills-image" src="assets/img/apple-touch-icon.png">
+            <img class="skills-image" src="../static/assets/img/OIP (1).jpg">
             <h3 class="skills-title">Conditioning</h3>
             <p class="skills-description">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
 
           </div>
 
            <div class="col-lg-4">
-            <img class="skills-image" src="assets/img/apple-touch-icon.png">
+            <img class="skills-image" src="../static/assets/img/nutrition.jpg">
             <h3 class="skills-title">Nutrition</h3>
             <p class="skills-description">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
 
@@ -254,7 +254,7 @@
 
             <div class="swiper-slide carousel-inner">
               <div class="testimonial-item carousel-item active container-fluid">
-                <img src="assets/img/testimonials/test-4.jpg" class="testimonial-img" alt="">
+                <img src="../static/assets/img/testimonials/test-3-4.jpg" class="testimonial-img" alt="">
                 <h3>Saul Goodman</h3>
                 <h4>Ceo &amp; Founder</h4>
                 <p>
@@ -267,7 +267,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/jordan-test.jpg" class="testimonial-img" alt="">
+                <img src="../static/assets/img/testimonials/Dylan7-8.jpg" class="testimonial-img" alt="">
                 <h3>Sara Wilsson</h3>
                 <h4>Designer</h4>
                 <p>
@@ -280,7 +280,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
+                <img src="static/assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
                 <h3>Jena Karlis</h3>
                 <h4>Store Owner</h4>
                 <p>
@@ -293,7 +293,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
+                <img src="../static/assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
                 <h3>Matt Brandon</h3>
                 <h4>Freelancer</h4>
                 <p>
@@ -306,7 +306,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
+                <img src="../static/assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
                 <h3>John Larson</h3>
                 <h4>Entrepreneur</h4>
                 <p>
