--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -9,9 +9,18 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+html, body {
+   margin:0;
+   padding:0;
+   height:100%;
+}
+
 body {
   font-family: "Open Sans", sans-serif;
   color: #444444;
+  position: relative;
+  min-height: 100%;
+  min-height: 100vh;
 }
 
 a {
@@ -711,7 +720,7 @@ section {
 }
 
 .testimonials .testimonial-item .testimonial-img {
-  width: 120px;
+  width: 180px;
   border-radius: 70%;
   border: 4px solid #fff;
   margin: 0 auto;
@@ -968,11 +977,16 @@ section {
   fill: #11dbcf;
 }
 .services .row {padding-left:100px;}
-.card {height: 35rem; width: 80rem;}
-.card-img-top {height: 400px; }
+/*.card {height: 35rem; width: 80rem;}*/
+/*.img-container {position: relative;}
+/*.image {transition: .5s ease; backface-visibility: hidden;}
+/*.overlay{transition: .5s ease;  opacity: 0; position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%)}*/
+/*.img-container:hover .image {opacity: 0.2;}
+.img_container:hover .overlay {opacity: 1;}
+.card-img-top {height: 400px;
 .card-img-top-chest {height: 400px; }
 
-.card-body {text-align: center; padding-top: 10px;}
+/*.card-body {text-align: center; padding-top: 10px;}
 /*--------------------------------------------------------------
 # Portfolio
 --------------------------------------------------------------*/
@@ -1164,6 +1178,7 @@ section {
 /*--------------------------------------------------------------
 # Contact
 --------------------------------------------------------------*/
+#contact .container {min-height: 100%; position: relative;}
 .contact .info {
   width: 100%;
   background: #fff;
@@ -1210,6 +1225,7 @@ section {
   color: #fff;
 }
 
+.contact footer {padding: 10px;}
 .contact .php-email-form {
   width: 100%;
   background: #fff;
@@ -1298,7 +1314,33 @@ section {
     transform: rotate(360deg);
   }
 }
+.footer-body #footer {
+background: #e9e8e6;
+  padding: 30px 0;
+  color: #222222;
+  font-size: 14px;
+  text-align: center;
+  margin-top: 100px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
 
+.success-body #footer {
+background: #e9e8e6;
+  padding: 30px 0;
+  color: #222222;
+  font-size: 14px;
+  text-align: center;
+  margin-top: 100px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.success-section {padding-top: 200px;}
 /*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
@@ -1308,6 +1350,9 @@ section {
   color: #222222;
   font-size: 14px;
   text-align: center;
+
+
+
 }
 
 #footer .credits {
@@ -1318,8 +1363,40 @@ section {
 #footer .credits a {
   color: #34b7a7;
 }
-
+.contact #footer {
+background: #e9e8e6;
+  padding: 30px 0;
+  color: #222222;
+  font-size: 14px;
+  text-align: center;
+  margin-top: 100px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
 /*--------------------------------------------------------------
 # Flash Messages
 --------------------------------------------------------------*/
 .flash {font-style: italic; color:red;}
+
+/*--------------------------------------------------------------
+# Checkout
+--------------------------------------------------------------*/
+.product {padding-top: 50px;}
+.checkout_card {position: absolute;}
+.checkout_card-title {padding-top:20px;}
+.checkout_card-text { padding-top: 50px; padding-bottom: 30px;}
+.checkout-title {position: relative; z-index: 1; padding-left: 1200px; padding-top: 100px; font-size: 80px;;}
+.checkout_body #footer {
+background: #e9e8e6;
+  padding: 30px 0;
+  color: #222222;
+  font-size: 14px;
+  text-align: center;
+  margin-top: 100px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
