--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -17,21 +17,21 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="static/assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="static/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="static/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="static/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="static/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="static/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="../static/assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="../static/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../static/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="../static/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="../static/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="../static/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="static/assets/css/style.css" rel="stylesheet">
+  <link href="../static/assets/css/style.css" rel="stylesheet">
 <!--  <link href="{{ url_for('static',filename='css/style.css') }}" rel="stylesheet">-->
 
 <!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">-->
 
   </head>
-  <body>
+  <body class="checkout_body">
  <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
     <div class="container-fluid d-flex justify-content-between align-items-center">
@@ -42,12 +42,12 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="active" href="{{url_for('home')}}">Home</a></li>
+          <li><a  href="{{url_for('home')}}">Home</a></li>
           <li><a href="{{url_for('about')}}">About</a></li>
 <!--          <li><a href="resume.html">Resume</a></li>-->
           <li><a href="{{url_for('services')}}">Services</a></li>
 <!--          <li><a href="portfolio.html">Portfolio</a></li>-->
-          <li><a class="active" href="{{ url_for('contact_me') }}">Contact</a></li>
+          <li><a  href="{{ url_for('contact_me') }}">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -66,28 +66,82 @@
     <section>
       <div class="product">
         {% if prod_id == '1': %}
-        <img src="static/assets/img/Dylan2test.jpg" alt="Abs Product" />
-        <div class="description">
-          <h3>{{ab_product.name}}</h3>
-          <h5>{{ab_product.metadata['test-price']}}</h5>
-        </div>
+<!--        <img src="../static/assets/img/Dylan2test.jpg" class="product-img" alt="Abs Product" />-->
+<!--        <div class="description">-->
+<!--          <h3>{{ab_product.name}}</h3>-->
+<!--          <h5>{{ab_product.metadata['test-price']}}</h5>-->
+<!--        </div>-->
+        <div class="card checkout_card mb-3" style="max-width: 1100px;">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="../static/assets/img/Dylan2test.jpg" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+            <div class="card-body">
+              <h1 class="checkout_card-title">{{ab_product.name}}</h1>
+              <h3 class="checkout_card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+              magna aliqua</h3>
+              <h2 class="checkout_card-text"><small class="text-muted">{{ab_product.metadata['test-price']}}</small></h2>
+               <form action=" {{ url_for('create_checkout_session', prod_id=prod_id)}} " method="POST">
+                  <button class="btn btn-outline-secondary" type="submit" id="checkout-button">Checkout</button>
+               </form>
+            </div>
+          </div>
+
         {% elif prod_id == '2': %}
-        <img src="static/assets/img/Dylan4.jpg" alt="Chest Product" />
-        <div class="description">
-          <h3>{{chest_product.name}}</h3>
-          <h5>{{chest_product.metadata['test-price']}}</h5>
-        </div>
+<!--        <img src="static/assets/img/Dylan4.jpg" alt="Chest Product" />-->
+<!--        <div class="description">-->
+<!--          <h3>{{chest_product.name}}</h3>-->
+<!--          <h5>{{chest_product.metadata['test-price']}}</h5>-->
+<!--        </div>-->
+            <div class="card checkout_card mb-3" style="max-width: 1100px;">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="../static/assets/img/Dylan4.jpg" class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                <div class="card-body">
+                  <h1 class="checkout_card-title">{{chest_product.name}}</h1>
+                  <h3 class="checkout_card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                  magna aliqua</h3>
+                  <h2 class="checkout_card-text"><small class="text-muted">{{chest_product.metadata['test-price']}}</small></h2>
+                   <form action=" {{ url_for('create_checkout_session', prod_id=prod_id)}} " method="POST">
+                      <button class="btn btn-outline-secondary" type="submit" >Checkout</button>
+                   </form>
+                </div>
+              </div>
         {% else: %}
-        <img src="static/assets/img/Dylan7.jpg" alt="Bi Product" />
-        <div class="description">
-          <h3>{{bicep_product.name}}</h3>
-          <h5>{{bicep_product.metadata['test-price']}}</h5>
+
+<!--        <img src="static/assets/img/Dylan7.jpg" alt="Bi Product" />-->
+<!--        <div class="description">-->
+<!--          <h3>{{bicep_product.name}}</h3>-->
+<!--          <h5>{{bicep_product.metadata['test-price']}}</h5>-->
+        <div class="card  checkout_card mb-3" style="max-width: 1100px;">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="../static/assets/img/Dylan7.jpg" class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                <div class="card-body">
+                  <h1 class="checkout_card-title">{{bicep_product.name}}</h1>
+                  <h3 class="checkout_card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                  magna aliqua</h3>
+                  <h2 class="checkout_card-text"><small class="text-muted">{{bicep_product.metadata['test-price']}}</small></h2>
+                   <form action=" {{ url_for('create_checkout_session', prod_id=prod_id)}} " method="POST">
+                      <button class="btn btn-outline-secondary" type="submit" >Checkout</button>
+                   </form>
+                </div>
+              </div>
+
         {% endif %}
       </div>
-      <form action=" {{ url_for('create_checkout_session', prod_id=prod_id)}} " method="POST">
-        <button class="btn btn-primary" type="submit" id="checkout-button">Checkout</button>
-      </form>
+
+<!--      <form action=" {{ url_for('create_checkout_session', prod_id=prod_id)}} " method="POST">-->
+<!--        <button class="btn btn-secondary" type="submit" id="checkout-button">Checkout</button>-->
+<!--      </form>-->
+
       </div>
+    <h1 class="  checkout-title">Are you ready to place your order!</h1>
     </section>
 
     <!-- ======= Footer ======= -->
@@ -109,17 +163,17 @@
   <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
    <!-- Vendor JS Files -->
-  <script src="static/assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="static/assets/vendor/aos/aos.js"></script>
-  <script src="static/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="static/assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="static/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="static/assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="static/assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="static/assets/vendor/php-email-form/validate.js"></script>
+  <script src="../static/assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="../static/assets/vendor/aos/aos.js"></script>
+  <script src="../static/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../static/assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="../static/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="../static/assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="../static/assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="../static/assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="static/assets/js/main.js"></script>
+  <script src="../static/assets/js/main.js"></script>
 
 <!--  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>-->
 <!--  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>-->
