--- a/templates/checkout2.html
+++ b/templates/checkout2.html
@@ -2,14 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
     <title>Checkout</title>
-    <link href="static/assets/vendor/aos/aos.css" rel="stylesheet">
-    <link href="static/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="static/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="static/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="static/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="static/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-    <link href="static/assets/css/style.css" rel="stylesheet" type="text/css">
+    <link href="aos.css" rel="stylesheet">
+    <link href="bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap-icons.css" rel="stylesheet">
+    <link href="boxicons.min.css" rel="stylesheet">
+    <link href="glightbox.min.css" rel="stylesheet">
+    <link href="swiper-bundle.min.css" rel="stylesheet">
+    <link href="../static/assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <!-- ======= Header ======= -->
@@ -45,7 +47,7 @@
   <section>
       <div class="product">
         {% if prod_id == '1': %}
-        <img src="static/assets/img/Dylan2test.jpg" alt="Abs Product" />
+        <img src="../static/assets/img/Dylan2test.jpg" alt="Abs Product" />
         <div class="description">
           <h3>{{ab_product.name}}</h3>
           <h5>{{ab_product.metadata['test-price']}}</h5>
@@ -68,13 +70,15 @@
       </form>
       </div>
     </section>
-    <script src="static/assets/vendor/purecounter/purecounter_vanilla.js"></script>
-    <script src="static/assets/vendor/aos/aos.js"></script>
-    <script src="static/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="static/assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="static/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="static/assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="static/assets/vendor/waypoints/noframework.waypoints.js"></script>
-    <script src="static/assets/js/main.js"></script>
+
+    <script type="text/js" src="purecounter_vanilla.js"></script>
+    <script type="text/jsx" src="aos.js"></script>
+    <script type="text/jsx" src="bootstrap.bundle.min.js"></script>
+    <script type="text/jsx" src="glightbox.min.js"></script>
+    <script type="text/jsx" src="isotope.pkgd.min.js"></script>
+    <script type="text/jsx" src="swiper-bundle.min.js"></script>
+    <script type="text/jsx" src="noframework.waypoints.js"></script>
+    <script type="text/jsx" src="main.js"></script>
+
 </body>
 </html>
