--- a/templates/contact.html
+++ b/templates/contact.html
@@ -36,7 +36,7 @@
   ======================================================== -->
 </head>
 
-<body>
+<body class="footer-body">
 
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
@@ -51,9 +51,9 @@
           <li><a href="{{ url_for('home') }}">Home</a></li>
           <li><a href="{{ url_for('about') }}">About</a></li>
 <!--          <li><a href="resume.html">Resume</a></li>-->
-          <li><a class="active" href="{{ url_for('services') }}">Services</a></li>
+          <li><a  href="{{ url_for('services') }}">Services</a></li>
 <!--          <li><a href="portfolio.html">Portfolio</a></li>-->
-          <li><a href="{{ url_for('contact_me') }}">Contact</a></li>
+          <li><a class="active" href="{{ url_for('contact_me') }}">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
