--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -1334,7 +1334,7 @@ background: #e9e8e6;
   font-size: 14px;
   text-align: center;
   margin-top: 100px;
-  position: absolute;
+  position: relative;
   right: 0;
   bottom: 0;
   left: 0;
@@ -1370,7 +1370,7 @@ background: #e9e8e6;
   font-size: 14px;
   text-align: center;
   margin-top: 100px;
-  position: absolute;
+  position: relative;
   right: 0;
   bottom: 0;
   left: 0;
@@ -1395,7 +1395,7 @@ background: #e9e8e6;
   font-size: 14px;
   text-align: center;
   margin-top: 100px;
-  position: absolute;
+  position: relative;
   right: 0;
   bottom: 0;
   left: 0;
