--- a/templates/index.html
+++ b/templates/index.html
@@ -72,6 +72,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
     <div class="container d-flex flex-column align-items-center" data-aos="zoom-in" data-aos-delay="100">
+<!--      <div class="hero-container">-->
 <!--      <div id="carouselExample" class="carousel slide carousel-fade" data-bs-ride="carousel">-->
 <!--  <div class="carousel-inner">-->
 <!--    <div class="carousel-item carousel-img  bg-img-1 active" data-bs-interval="10000">-->
@@ -94,8 +95,10 @@
 <!--    <span class="visually-hidden">Next</span>-->
 <!--  </button>-->
 <!--</div>-->
-      <h1 class="hero-header">Dylan Earl Fitness</h1><i class="bi bi-heart-fill"></i>
-      <a href="{{url_for('services')}}" class="btn-about">Start your journey!</a>
+        <h1 class="hero-header">Dylan Earl Fitness</h1><i class="bi bi-heart-fill"></i>
+
+        <a href="{{url_for('services')}}" class="btn-about">Start your journey!</a>
+<!--      </div>-->
     </div>
   </section><!-- End Hero -->
 
