Added multiple media queries to the header icon and button on index page made changes to footer position of contact success and checkout pages

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -628,6 +628,8 @@ h6 {
         margin-right: 800px;
     }
 }
+/* add media query for less than 400 px */
+
 
 #hero .btn-about:hover {
   background: #3dc8b7;
