--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
       </nav><!-- .navbar -->
 
       <div class="header-social-links">
-        <a href="https://www.youtube.com/@dylanearl1395" class="youtube"><i class="bi bi-youtube"></i></a>
+        <a href="https://www.youtube.com/@Dyl00" class="youtube"><i class="bi bi-youtube"></i></a>
         <a href="https://www.tiktok.com/@dylan.earl" class="tiktok"><i class="bi bi-tiktok"></i></a>
         <a href="https://www.instagram.com/dylan_earl/" class="instagram"><i class="bi bi-instagram"></i></a>
 <!--        <a href="https://www.linkedin.com/in/dylan-earl-8615b824b/" class="linkedin"><i class="bi bi-linkedin"></i></i></a>-->
